// Copyright 2022 Datafuse Labs.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package databend_proto;

// An enumeration of all supported data types.
message DataType {
  uint64 ver = 100;
  uint64 min_compatible = 101;

  oneof dt {
    NullableType nullable_type = 1;
    Empty bool_type = 2;
    Empty int8_type = 3;
    Empty int16_type = 4;
    Empty int32_type = 5;
    Empty int64_type = 6;
    Empty uint8_type = 7;
    Empty uint16_type = 8;
    Empty uint32_type = 9;
    Empty uint64_type = 10;
    Empty float32_type = 11;
    Empty float64_type = 12;
    Empty date_type = 13;
    Timestamp timestamp_type = 14;
    Empty string_type = 15;
    Struct struct_type = 16;
    Array array_type = 17;
    Variant variant_type = 18;
    VariantArray variant_array_type = 19;
    VariantObject variant_object_type = 20;
    IntervalType interval_type = 21;
  }
}

// A wrapper data type of another type.
// Such a column allows to contain `null` elements
message NullableType {
  uint64 ver = 100;
  uint64 min_compatible = 101;

  // The type for the non-null element.
  DataType inner = 1;
}

// Timestamp data type with customizable precision and timezone: `tz`.
message Timestamp {
  uint64 ver = 100;
  uint64 min_compatible = 101;

  /// The time resolution is determined by the precision parameter, range from 0
  /// to 9 Typically are used - 0 (seconds) 3 (milliseconds), 6 (microseconds),
  /// 9 (nanoseconds).
  uint64 precision = 1;
}

// Struct is similar to a `map` with fixed keys.
message Struct {
  uint64 ver = 100;
  uint64 min_compatible = 101;

  // Struct field names.
  repeated string names = 1;

  // The corresponding field types.
  repeated DataType types = 2;
}

// Array contains multiple elements of the same type.
message Array {
  uint64 ver = 100;
  uint64 min_compatible = 101;

  // The type of the elements
  DataType inner = 1;
}

message VariantArray {
  uint64 ver = 100;
  uint64 min_compatible = 101;
}

message VariantObject {
  uint64 ver = 100;
  uint64 min_compatible = 101;
}

enum IntervalKind {
  Year = 0;
  Month = 1;
  Day = 2;
  Hour = 3;
  Minute = 4;
  Second = 5;
  Doy = 6;
  Dow = 7;
}
message IntervalType {
  uint64 ver = 100;
  uint64 min_compatible = 101;

  IntervalKind kind = 1;
}

// Something under developing.:)
message Variant {
  uint64 ver = 100;
  uint64 min_compatible = 101;
}

// Place holder type for primitive types
message Empty {}
